# valihuutobot-v2

./: Cargo.toml  README.md
src/: main.rs  memos.rs  text_handling.rs
tests/: memos_test.rs
