[package]
name = "valihuutobot-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
regex = "1.11.1"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
rss = "2.0.11"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
urlencoding = "2.1.3"